--- a/src/app/bank-details/bank-details.component.html
+++ b/src/app/bank-details/bank-details.component.html
@@ -51,8 +51,8 @@
 </div> -->
 
 
-
-<section class="reset_pwd_section add_bank_account_sec d-flex flex-wrap align-content-center">
+<div class="secondStep" style="display:none">
+<section class="reset_pwd_section add_bank_account_sec d-flex flex-wrap align-content-center ">
     <div class="container-fluid">
         <h3 class="text-center">Aso Ebi</h3>
         <div class="add_bank_account">
@@ -108,7 +108,7 @@
                         <div class="input-group">
                             <input type="text" max="16" maxlength="16" class="form-control"
                                 formControlName="accountNumber" (input)="validateAccountNumber(bankDetailsForm.value)"
-                                id="accountNumber"
+                                id="accountNumber" 
                                 [ngClass]="{ 'is-invalid': f.accountNumber.touched && f.accountNumber.errors }"
                                 placeholder="Account Number">
                             <span id="message2" style="color: white !important; font-size: 14px;"></span>
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <div class="input-group">
                             <input type="text" class="form-control" max="9" maxlength="9" formControlName="IFSCCode"
                                 (input)="validateIFSCCode(bankDetailsForm.value)" id="IFSCCode"
@@ -136,7 +136,7 @@
                                 <div *ngIf="f.IFSCCode.errors.maxlength">IFSC Code must be only 9 digits</div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="btn_submit_pwd">
                         <button class="btn text-white text-center add_bank_btn submit_btn_pwd text-center"
                             (click)="onSubmit()" [disabled]="isDisable || bankDetailsForm.invalid">Submit</button>
@@ -147,10 +147,12 @@
         </div>
 </section>
 
+</div>
 
 
 
-<div class="new_event_slide ten_slide" step>
+
+<div class="new_event_slide ten_slide firstStep">
     <div class="event_inner_content_box">
         <div class="event_inner_content ">
             <div class="new_event_sec">
@@ -186,7 +188,7 @@
                         </div>
                         <div class="col-1 p-0">
                             <div class="plus_add">
-                                <a class="text-white" data-toggle="modal" data-target="#exampleModal">
+                                <a class="text-white" (click)="addBankAccount()" data-toggle="modal" data-target="#exampleModal">
                                     <img src="/assets/images/plus.png"> </a>
                             </div>
                         </div>
@@ -194,13 +196,12 @@
                 </div>
                 <div class="check">
                     <label class="container">Instant transfer to my account
-                        <input type="checkbox" name="checkButton" id="box1">
+                        <input type="checkbox" name="checkButton" id="box1" value="direct">
                         <span class="checkmark"></span>
                     </label>
                     <label class="container">Franster on 05-08-2019 to my account (this option saves
-
                         you on alert notifications)
-                        <input type="checkbox" name="checkButton" id="box2">
+                        <input type="checkbox" name="checkButton" id="box2" value="indirect">
                         <span class="checkmark"></span>
                     </label>
                 </div>
