--- a/src/styles.css
+++ b/src/styles.css
@@ -387,7 +387,7 @@ label.upload_photo {
 	font-size: 17.29px;
 	font-family: 'Russo One', sans-serif;
 	height: 49px;
-	/* width: 149px; */
+	width: 149px;
 	text-transform: uppercase;
 	line-height: 49px;
 	margin: 60px;
@@ -6839,7 +6839,7 @@ tr.blue-table-header{
 	.inner_content_btn a {
 		font-size: 14px;
 		height: 36px;
-		/* width: 115px; */
+		width: 115px;
 		line-height: 40px;
 		margin: 15px 15px 5px 15px;
 	}
@@ -6906,10 +6906,7 @@ tr.blue-table-header{
 	.col-10.social_media_login{
 		margin: auto;
 	}
-	.facebook_sec , .microsoft_sec {
-		margin: 0px;
-	}
-	.join_form a {
+		.join_form a {
 		font-size: 20px;
 		height: 45px;
 		line-height: 50px;
