--- a/src/app/bank-details/bank-details.component.html
+++ b/src/app/bank-details/bank-details.component.html
@@ -51,7 +51,7 @@
 </div> -->
 
 
-<div class="secondStep" style="display:none">
+<!-- <div class="secondStep" style="display:none">
 <section class="reset_pwd_section add_bank_account_sec d-flex flex-wrap align-content-center ">
     <div class="container-fluid">
         <h3 class="text-center">Aso Ebi</h3>
@@ -122,21 +122,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="form-group">
-                        <div class="input-group">
-                            <input type="text" class="form-control" max="9" maxlength="9" formControlName="IFSCCode"
-                                (input)="validateIFSCCode(bankDetailsForm.value)" id="IFSCCode"
-                                [ngClass]="{ 'is-invalid': f.IFSCCode.touched && f.IFSCCode.errors }"
-                                placeholder="IFSC Code">
-                            <span id="message3" style="color: white !important; font-size: 14px;"></span>
-                            <div class="col-md-4" *ngIf="f.IFSCCode.touched && f.IFSCCode.errors"
-                                class="invalid-feedback">
-                                <div *ngIf="f.IFSCCode.errors.required">IFSC Code is required</div>
-                                <div *ngIf="f.IFSCCode.errors.minlength">IFSC Code must be only 9 digits</div>
-                                <div *ngIf="f.IFSCCode.errors.maxlength">IFSC Code must be only 9 digits</div>
-                            </div>
-                        </div>
-                    </div> -->
                     <div class="btn_submit_pwd">
                         <button class="btn text-white text-center add_bank_btn submit_btn_pwd text-center"
                             (click)="onSubmit()" [disabled]="isDisable || bankDetailsForm.invalid">Submit</button>
@@ -147,12 +132,12 @@
         </div>
 </section>
 
-</div>
+</div> -->
 
 
 
 
-<div class="new_event_slide ten_slide firstStep">
+<!-- <div class="new_event_slide ten_slide firstStep">
     <div class="event_inner_content_box">
         <div class="event_inner_content ">
             <div class="new_event_sec">
@@ -211,4 +196,238 @@
             </div>
         </div>
     </div>
+</div> -->
+
+
+
+
+<!-- 
+<div *ngIf="!isDiable">
+    <div class="row">
+        <div class="col-md-6 m-auto pt-5">
+            <div class="card p-5">
+                <form [formGroup]="bankDetailsForm" autocomplete="off">
+                    <div class="form-group">
+                        <label for="bankName">Bank Name</label>
+                        <input type="text" (input)="validateBankName(bankDetailsForm.value)" id="bankName"
+                            class="form-control" formControlName="bankName"
+                            [ngClass]="{ 'is-invalid': f.bankName.touched && f.bankName.errors }">
+                        <span id="message1" style="color: red; font-size: 14px;"></span>
+                        <div class="col-md-2" *ngIf=" f.bankName.touched && f.bankName.errors" class="invalid-feedback">
+                            <div *ngIf="f.bankName.errors.required">Name is required</div>
+                            <div *ngIf="f.bankName.errors.minlength">Name must be at least 2 characters</div>
+                            <div *ngIf="f.bankName.errors.pattern">Please enter only alphabates</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="accountNumber">Account Number</label>
+                        <input type="number" class="form-control" formControlName="accountNumber"
+                            (input)="validateAccountNumber(bankDetailsForm.value)" id="accountNumber"
+                            [ngClass]="{ 'is-invalid': f.accountNumber.touched && f.accountNumber.errors }">
+                        <span id="message" style="color: red; font-size: 14px;"></span>
+                        <div class="col-md-4" *ngIf="f.accountNumber.touched && f.accountNumber.errors"
+                            class="invalid-feedback">
+                            <div *ngIf="f.accountNumber.errors.required">Account Number is required</div>
+                            <div *ngIf="f.accountNumber.errors.minlength">Account Number must be only 16 digits</div>
+                            <div *ngIf="f.accountNumber.errors.maxlength">Account Number must be only 16 digits</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="IFSCCode">IFSC Code</label>
+                        <input type="number" class="form-control" formControlName="IFSCCode"
+                            (input)="validateIFSCCode(bankDetailsForm.value)" id="IFSCCode"
+                            [ngClass]="{ 'is-invalid': f.IFSCCode.touched && f.IFSCCode.errors }">
+                        <span id="message" style="color: red; font-size: 14px;"></span>
+                        <div class="col-md-4" *ngIf="f.IFSCCode.touched && f.IFSCCode.errors" class="invalid-feedback">
+                            <div *ngIf="f.IFSCCode.errors.required">IFSC Code is required</div>
+                            <div *ngIf="f.IFSCCode.errors.minlength">IFSC Code must be only 9 digits</div>
+                            <div *ngIf="f.IFSCCode.errors.maxlength">IFSC Code must be only 9 digits</div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-primary" (click)="onSubmit()"
+                        [disabled]="isDisable || bankDetailsForm.invalid">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div> -->
+
+
+<div class="secondStep" style="display:none">
+    <section class="reset_pwd_section add_bank_account_sec d-flex flex-wrap align-content-center ">
+        <div class="container-fluid">
+            <h3 class="text-center">Aso Ebi</h3>
+            <div class="add_bank_account">
+                <div class="Join_inner_content_box">
+                    <div class="event_inner_content">
+                        <div class="new_event_sec">
+                            <div class="row">
+                                <div class="col-3 m-auto pr-0 float-right new_event_menu">
+                                    <a href="javascript:void(0)"><img src="/assets/images/bank_icon.png"></a>
+                                    <p class="text-white">New Event</p>
+                                </div>
+                                <div class="col-9 p-0">
+                                    <span class="text-white event_name"> Hello Rao Info Tech </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="overlay" class="new_event_menu_box" style="display: none;">
+                            <div class="">
+                                <div class="event_menu">
+                                    <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                                        <ul>
+                                            <li><a routerLink="myEvent" class="text-white text-center new_event">my
+                                                    event</a></li>
+                                            <li><a routerLink="createEvent" class="text-white text-center my_event">new
+                                                    event</a></li>
+                                            <li><a routerLink="bankDetails"
+                                                    class="text-white text-center my_account">bank account</a>
+                                            </li>
+                                            <li><a routerLink="reset-password"
+                                                    class="text-white text-center my_account">Reset
+                                                    Password</a></li>
+                                            <li><a (click)="logout()"
+                                                    class="text-white text-center my_account">Logout</a></li>
+                                            <li><a href="#" class="text-white text-center my_messages">Messages</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <form [formGroup]="bankDetailsForm" autocomplete="off" class="join_form forgot_pwd_form mt-3">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <input type="text" class="form-control"
+                                    (input)="validateBankName(bankDetailsForm.value)" id="bankName" class="form-control"
+                                    formControlName="bankName"
+                                    [ngClass]="{ 'is-invalid': f.bankName.touched && f.bankName.errors }"
+                                    placeholder="Bank Name" name="bname">
+                                <div class="col-md-2" *ngIf=" f.bankName.touched && f.bankName.errors"
+                                    class="invalid-feedback text-white">
+                                    <div *ngIf="f.bankName.errors.required">Name is required</div>
+                                    <div *ngIf="f.bankName.errors.minlength">Name must be at least 2 characters</div>
+                                    <div *ngIf="f.bankName.errors.pattern">Please enter only alphabates</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <input type="text" max="16" maxlength="16" class="form-control"
+                                    formControlName="accountNumber"
+                                    (input)="validateAccountNumber(bankDetailsForm.value)" id="accountNumber"
+                                    [ngClass]="{ 'is-invalid': f.accountNumber.touched && f.accountNumber.errors }"
+                                    placeholder="Account Number">
+                                <div *ngIf="f.accountNumber.touched && f.accountNumber.errors"
+                                    class="invalid-feedback text-white">
+                                    <div *ngIf="f.accountNumber.errors.required">Account Number is required</div>
+                                    <div *ngIf="f.accountNumber.errors.minlength">Account Number must be only 16 digits
+                                    </div>
+                                    <div *ngIf="f.accountNumber.errors.maxlength">Account Number must be only 16 digits
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="btn_submit_pwd">
+                            <button class="btn text-white text-center add_bank_btn submit_btn_pwd text-center"
+                                (click)="onSubmit()" [disabled]="isDisable || bankDetailsForm.invalid">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
+
+<div class="secondStep">
+    <section class="add_bank_sec reset_pwd_section d-flex flex-wrap align-content-center">
+        <div class="container-fluid">
+            <h3 class="text-center">Aso Ebi</h3>
+            <div class="event_inner_content_box">
+                <div class="event_inner_content ">
+                    <div class="new_event_sec">
+                        <div class="row">
+                            <div class="col-3 m-auto pr-0 float-right new_event_menu">
+                                <a><img src="/assets/images/10icon.png">
+                                    <p class="text-white">New Event</p>
+                                </a>
+                            </div>
+                            <div class="col-9 p-0">
+                                <span class="text-white event_name"> Hello Rao Info Tech </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="overlay" class="new_event_menu_box" style="display: none;">
+                        <div class="">
+                            <div class="event_menu">
+                                <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                                    <ul>
+                                        <li><a routerLink="myEvent" class="text-white text-center new_event">my
+                                                event</a></li>
+                                        <li><a routerLink="createEvent" class="text-white text-center my_event">new
+                                                event</a></li>
+                                        <li><a routerLink="bankDetails" class="text-white text-center my_account">bank
+                                                account</a>
+                                        </li>
+                                        <li><a routerLink="reset-password"
+                                                class="text-white text-center my_account">Reset
+                                                Password</a></li>
+                                        <li><a (click)="logout()" class="text-white text-center my_account">Logout</a>
+                                        </li>
+                                        <li><a href="#" class="text-white text-center my_messages">Messages</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="event_bank_detail">
+                        <div class="event_hashtag text-center">
+                            <p># Event Hashtag</p>
+                        </div>
+                        <div class="sliding">
+                            <div class="row bank_slider">
+                                <div class="col-11 ">
+                                    <div class="slider1">
+                                        <div class="slide1" *ngFor="let details of bankDetails">
+                                            <div class=slider_radio_btn>
+                                                <input type="radio" id="{{details._id}}" [value]="details._id"
+                                                    name="radio-group">
+                                                <label for="{{details._id}}"></label>
+                                            </div>
+                                            <div class="slider_box1">
+                                                <p>Bank name: {{details.bankName}}<br> Account number:
+                                                    {{details.accountNumber}}
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-1 p-0">
+                                    <div class="plus_add">
+                                        <a class="text-white" (click)="addBankAccount()" data-toggle="modal"
+                                            data-target="#exampleModal">
+                                            <img src="/assets/images/plus.png">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="check">
+                            <label class="container">Instant transfer to my account
+                                <input type="checkbox" name="checkButton" id="box1" value="direct">
+                                <span class="checkmark"></span>
+                            </label>
+                            <label class="container">Franster on 05-08-2019 to my account (this option saves
+                                you on alert notifications)
+                                <input type="checkbox" name="checkButton" id="box2" value="indirect">
+                                <span class="checkmark"></span>
+                            </label>
+                        </div>
+                        <div class="addBank text-white text-center">
+                            <a class="text-white text-center" (click)="selectBank()">Save</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
