--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -1,230 +1,6 @@
-#register_steps_tab.ui-accordion .step_content.ui-accordion-content{
-    padding: 36px;
-    border-radius: 0px;
-    border-color: #d4d4d4;
-    overflow: hidden;
- }
- .register_step_section{
-    margin-top: 38px;
- }
- #register_steps_tab.ui-accordion .ui-accordion-header:first-child{
-    margin-top: 0px;
- }
- #register_steps_tab.ui-accordion .ui-accordion-header{
-    margin-top: 10px;
-    border-radius: 0px;
-    background-color: #818181;
-    color: #fff;
-    font-size: 18px;
-    padding: 4px 20px;
-    text-transform: uppercase;
-    border-color: #818181;
-    pointer-events: none;
-    outline: none;
-    font-weight: 600;
- }
- #register_steps_tab .ui-icon,
- #register_steps_tab .ui-widget-content .ui-icon{
-    display: none;
- }
- #register_steps_tab.ui-accordion .ui-accordion-header.ui-accordion-header-active{
-    background-color: #0085f2;
-    border-color: #0085f2;
- }
- #register_steps_tab.ui-accordion .ui-accordion-header.ui-accordion-header-active span.step_number{
-    background-color: #0077d8;
- }
- span.step_number{
-    height: 40px;
-    width: 40px;
-    margin-right: 20px;
-    background-color: #b7b7b7;
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-    padding: 10px 0px;
-    border-radius: 50%;
- }
- .step_content h3{
-    font-size: 18px;
-    color: #474747;
-    padding-bottom: 17px;
- }
- .register_step_section .breadcrumb{margin-top: 13px;}
- .step_content .form_input{margin-bottom: 18px;}
- .step_content .form_input label {
-    display: block;
-    font-size: 14px;
-    color: #474747;
-    margin-bottom: 4px;
- }
- .step_content .form_input .input_text {
-    font-size: 14px;
-    color: #56575a;
-    height: 40px;
-    width: 100%;
-    border: 1px solid #d4d4d4;
-    border-radius: 4px;
-    padding: 0px 18px;
- }
- .next_step_and_prev_step{
-    display: inline-block;
-    margin-top: 3px;
-    float: right;
- }
- .next_step_and_prev_step a,
- .next_step_and_prev_step .reg_submit_btn,
- .continue_to_next_step a.continue_to_next,
- .continue_to_next_step .btn_submit{
-    color: #fff;
-    display: inline-block;
-    padding: 10px 26px;
-    font-size: 16px;
-    text-transform: capitalize;
-    border-radius: 4px;
-    outline: none;
-    border: none;
- }
- .next_step_and_prev_step a.prev_step{
-    background-color: #454748;
-    margin-right: 16px;
- }
- .next_step_and_prev_step a.next_step,
- .next_step_and_prev_step .reg_submit_btn,
- .continue_to_next_step a.continue_to_next,
- .continue_to_next_step .btn_submit{
-    background-color: #0077d8;
- }
- .continue_to_next_step .btn_submit{
-    margin-top: 29px;
- }
- #register_steps_tab {
-    padding-bottom: 25px;
- }
- .bill_check_box input[type=checkbox] {
-    margin: -1px 6px 0px 0px;
-    display: inline-block;
-    vertical-align: middle;
-    outline: none;
- }
- .bill_check_box label {
-    display: inline-block;
-    font-size: 14px;
-    color: #474747;
- }
- .bill_check_box {
-    padding-bottom: 16px;
- }
- .step_content .form_input select.input_text{
-    background-repeat: no-repeat;
-    background-position: center right 18px;
-    background-color: transparent;
-    -webkit-appearance: none;
- }
- #register_steps_tab.ui-accordion .ui-accordion-header.step_done{
-    background-color: #5fcc68;
-    border-color: #5fcc68;
- }
- #register_steps_tab.ui-accordion .ui-accordion-header.step_done span.step_number{
-    background-color: #52b05a;
- }
- .single_activity:first-child .remove_row {
-    display: none;
+.slider_next_btn a{
+	background-color: rgb(255, 181, 77);
+	font-size: 18px;
+	font-family: 'Russo One', sans-serif;
+	padding: 8px 30px;
 }
-
-.single_group:first-child .remove_row {
-   display: none;
-}
-
-
-
-/* Filteration of profile photo */
-/* 
-.selector{
-  background: grey;
-  text-align: center;
-}
-#background{
-  height: 500px;
-  margin-top: 10px;
-    background-image: url("https://images.unsplash.com/photo-1455476915919-2b028d0a1230");
-  background-size: cover;
-  width: 100%;
-  height: 500px;
-}
-p{
-  font-family: arial;
-  color: #ffffff;
-  text-align: center;
-  display: inline-block;
-  font-weight: bold;
-  margin-right: 10%;
-  font-size: 20px;
-  text-transform: uppercase;
-}
-#color1:hover{
-  color: #000000;
-}
-#color2:hover{
-  color: #cd811f;
-}
-#normal:hover{
-  color: #4b591b;
-} */
-
-
-
-/* profile photo css */
-
-
-/* 
- .profile_image{
-   overflow: hidden;
-   border-radius: 2px;
-   max-width: 100%;
-   max-height: 100%;
-   min-width: 100%;
- }
- .profile_content{
-    max-width: calc(100% - 250px);
- }
- .profile_image label.profile_and_cover_edit {
-   opacity: 0;
-   position: absolute;
-   left: 0;
-   right: 0;
-   bottom: 0;
-   background-color: #6c757d;
-   z-index: 1111;
-   text-align: center;
-   color: #fff;
-   padding: 7px;
-   cursor: pointer;
-   border-radius: 0;
-   font-size: 15px;
-   margin: 0;
-   line-height: 16px;
-   transition: all 0.5s;
- }
- .profile_image_box{
-   width: 100%;
-   padding-top: 100%;
-   position: relative;
-   border-radius: 50%;
-   overflow: hidden;
- }
- .profile_image_box img{
-   position: absolute;
-   left: 0;
-   right: 0;
-   bottom: 0;
-   top: 0;
-   object-fit: cover;
-   min-width: 100%;
-   min-height: 100%;
-   max-height: 100%;
-   max-width: 100%;
- }
- .profile_image_box:hover label.profile_and_cover_edit {
-   opacity: 0.75;
- } */
